--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1>Hello World</h1>
+<style>iframe {width:100vw; height:100vh; object-fit:cover;}</style>
+<iframe src="https://www.youtube.com/embed/ctecs8w73DM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
