--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<style>iframe {width:100vw; height:100vh; object-fit:cover;}</style>
+<style>iframe {width:100vw; height:100vh; object-fit:cover;}
+div {width:100vw;  object-fit:cover;text-align:center;}
+.t { font-family: Arial, Helvetica, sans-serif;}
+</style>
+<div>
+	<h1 class='t' style="margin-bottom:0px">CHRISTIAN.CITY</h1>
+	<h2 class='t' style="font-weight:100">We are building a city to make cold humans happy: sun, warmth and good food.</h2>
+	<h2 class='t' style="font-weight:100">We are bringing 1 million people from London to Christian City in the next year</h2>
+</div>
 <iframe src="https://www.youtube.com/embed/ctecs8w73DM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<div>
+	<img style="width:100%" src="IMG_5682.jpg"/>
+</div>
